@@ -7,6 +7,7 @@ export(bitr)
 export(bitr_kegg)
 export(buildGOmap)
 export(compareCluster)
+export(download_KEGG)
 export(dropGO)
 export(enrichDAVID)
 export(enrichGO)
