@@ -1,15 +1,15 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/enrichKEGG.R
-\name{download.KEGG}
-\alias{download.KEGG}
-\title{download.KEGG}
+\name{download_KEGG}
+\alias{download_KEGG}
+\title{download_KEGG}
 \usage{
-download.KEGG(species, KEGG_Type = "KEGG", keyType = "kegg")
+download_KEGG(species, keggType = "KEGG", keyType = "kegg")
 }
 \arguments{
 \item{species}{species}
 
-\item{KEGG_Type}{one of 'KEGG' or 'MKEGG'}
+\item{keggType}{one of 'KEGG' or 'MKEGG'}
 
 \item{keyType}{supported keyType, see bitr_kegg}
 }
@@ -17,7 +17,7 @@ download.KEGG(species, KEGG_Type = "KEGG", keyType = "kegg")
 list
 }
 \description{
-download the latest version of KEGG pathway
+download the latest version of KEGG pathway/module
 }
 \author{
 Guangchuang Yu
